--- a/requirements.txt
+++ b/requirements.txt
@@ -26,12 +26,12 @@ httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
-Kivy==2.3.1
-kivy-deps.angle==0.4.0
-kivy-deps.glew==0.3.1
-Kivy-Garden==0.1.5
-kivy_deps.sdl2==0.8.0
-kivymd==1.2.0
+# Kivy==2.3.1
+# kivy-deps.angle==0.4.0
+# kivy-deps.glew==0.3.1
+# Kivy-Garden==0.1.5
+# kivy_deps.sdl2==0.8.0
+# kivymd==1.2.0
 kiwisolver==1.4.9
 MarkupSafe==3.0.2
 matplotlib==3.8.0
@@ -50,13 +50,13 @@ pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
 pyparsing==3.2.3
-pypiwin32==223
+# pypiwin32==223
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
 python-multipart==0.0.20
 pytz==2025.2
-pywin32==311
+# pywin32==311
 requests==2.32.5
 rsa==4.9.1
 sh==2.2.2
